dark mode fix

--- a/css/hyde.css
+++ b/css/hyde.css
@@ -71,7 +71,7 @@ html {
   text-align: center;
   padding: 2rem 1rem 1rem 1rem;
   color: rgba(255,255,255,.5);
-  background-color: #181818;
+  background-color: var(--sidebar-background-color);
 }
 @media (min-width: 48em) {
   .sidebar {
